...
    var body: some View {
        ScrollView {
            VStack(alignment: .leading, spacing: 24) {
                Text("Download Drugs")
                    .font(.largeTitle)
                    .fontWeight(.bold)
                    .accessibilityIdentifier("downloadDrugsTitle")
                
                if let stats = viewModel.stats {
                    HStack {
                        Text("Current drugs in database:")
                            .font(.headline)
                        Text("\(stats.drugs)")
...
